<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#280827"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_my_hospital"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="?attr/actionModeSplitBackground"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/tv_welcome_subtitle"
        android:layout_marginTop="64dp" />

    <TextView
        android:id="@+id/tv_welcome_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/your_health_our_priority_click_the_button_below_to_register_as_a_new_patient"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_register_patient" />

    <Button
        android:id="@+id/btn_register_patient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_new_patient"
        android:padding="15dp"
        android:textSize="18sp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3" /> </androidx.constraintlayout.widget.ConstraintLayout>